spec/errors/syntax/chained_statements.lang
#
# Improperly Chained Statements
#

a + b c + d
